objectbox/lib/src/bindings/objectbox-c.dart


  /// /// Advanced setting recommended to be used together with read-only mode to ensure no data is lost.
  /// /// Ignores the latest data snapshot (committed transaction state) and uses the previous snapshot instead.
  /// /// When used with care (e.g. backup the DB files first), this option may also recover data removed by the latest
  /// /// transaction. Defaults to false.
  void opt_use_previous_commit(
    ffi.Pointer<OBX_store_options> opt,
    bool value,
  ) {
    _opt_use_previous_commit ??= _dylib.lookupFunction<
        _c_opt_use_previous_commit,
        _dart_opt_use_previous_commit>('obx_opt_use_previous_commit');
    return _opt_use_previous_commit(
      opt,
      value ? 1 : 0,
    );
  }

  _dart_opt_use_previous_commit _opt_use_previous_commit;

  /// /// Open store in read-only mode: no schema update, no write transactions. Defaults to false.
  void opt_read_only(
    ffi.Pointer<OBX_store_options> opt,
    bool value,
  ) {
    _opt_read_only ??=
        _dylib.lookupFunction<_c_opt_read_only, _dart_opt_read_only>(
            'obx_opt_read_only');
    return _opt_read_only(
      opt,
      value ? 1 : 0,
    );
  }

  _dart_opt_read_only _opt_read_only;

  /// /// Configure debug logging. Defaults to NONE
  void opt_debug_flags(
    ffi.Pointer<OBX_store_options> opt,
    int flags,
  ) {
    _opt_debug_flags ??=
        _dylib.lookupFunction<_c_opt_debug_flags, _dart_opt_debug_flags>(
            'obx_opt_debug_flags');
    return _opt_debug_flags(
      opt,
      flags,
    );
  }

  _dart_opt_debug_flags _opt_debug_flags;

  /// /// Maximum of async elements in the queue before new elements will be rejected.
  /// /// Hitting this limit usually hints that async processing cannot keep up;
  /// /// data is produced at a faster rate than it can be persisted in the background.
  /// /// In that case, increasing this value is not the only alternative; other values might also optimize throughput.
  /// /// For example, increasing maxInTxDurationMicros may help too.
  void opt_async_max_queue_length(
    ffi.Pointer<OBX_store_options> opt,
    int value,
  ) {
    _opt_async_max_queue_length ??= _dylib.lookupFunction<
        _c_opt_async_max_queue_length,
        _dart_opt_async_max_queue_length>('obx_opt_async_max_queue_length');
    return _opt_async_max_queue_length(
      opt,
      value,
    );
  }

  _dart_opt_async_max_queue_length _opt_async_max_queue_length;

  /// /// Producers (AsyncTx submitter) is throttled when the queue size hits this
  void opt_async_throttle_at_queue_length(
    ffi.Pointer<OBX_store_options> opt,
    int value,
  ) {
    _opt_async_throttle_at_queue_length ??= _dylib.lookupFunction<
            _c_opt_async_throttle_at_queue_length,
            _dart_opt_async_throttle_at_queue_length>(
        'obx_opt_async_throttle_at_queue_length');
    return _opt_async_throttle_at_queue_length(
      opt,
      value,
    );
  }

  _dart_opt_async_throttle_at_queue_length _opt_async_throttle_at_queue_length;

  /// /// Sleeping time for throttled producers on each submission
  void opt_async_throttle_micros(
    ffi.Pointer<OBX_store_options> opt,
    int value,
  ) {
    _opt_async_throttle_micros ??= _dylib.lookupFunction<
        _c_opt_async_throttle_micros,
        _dart_opt_async_throttle_micros>('obx_opt_async_throttle_micros');
    return _opt_async_throttle_micros(
      opt,
      value,
    );
  }

  _dart_opt_async_throttle_micros _opt_async_throttle_micros;

  /// /// Maximum duration spent in a transaction before AsyncQ enforces a commit.
  /// /// This becomes relevant if the queue is constantly populated at a high rate.
  void opt_async_max_in_tx_duration(
    ffi.Pointer<OBX_store_options> opt,
    int micros,
  ) {
    _opt_async_max_in_tx_duration ??= _dylib.lookupFunction<
        _c_opt_async_max_in_tx_duration,
        _dart_opt_async_max_in_tx_duration>('obx_opt_async_max_in_tx_duration');
    return _opt_async_max_in_tx_duration(
      opt,
      micros,
    );
  }

  _dart_opt_async_max_in_tx_duration _opt_async_max_in_tx_duration;

  /// /// Maximum operations performed in a transaction before AsyncQ enforces a commit.
  /// /// This becomes relevant if the queue is constantly populated at a high rate.
  void opt_async_max_in_tx_operations(
    ffi.Pointer<OBX_store_options> opt,
    int value,
  ) {
    _opt_async_max_in_tx_operations ??= _dylib.lookupFunction<
            _c_opt_async_max_in_tx_operations,
            _dart_opt_async_max_in_tx_operations>(
        'obx_opt_async_max_in_tx_operations');
    return _opt_async_max_in_tx_operations(
      opt,
      value,
    );
  }

  _dart_opt_async_max_in_tx_operations _opt_async_max_in_tx_operations;

  /// /// Before the AsyncQ is triggered by a new element in queue to starts a new run, it delays actually starting the
  /// /// transaction by this value.
  /// /// This gives a newly starting producer some time to produce more than one a single operation before AsyncQ starts.
  /// /// Note: this value should typically be low to keep latency low and prevent accumulating too much operations.
  void opt_async_pre_txn_delay(
    ffi.Pointer<OBX_store_options> opt,
    int delay_micros,
  ) {
    _opt_async_pre_txn_delay ??= _dylib.lookupFunction<
        _c_opt_async_pre_txn_delay,
        _dart_opt_async_pre_txn_delay>('obx_opt_async_pre_txn_delay');
    return _opt_async_pre_txn_delay(
      opt,
      delay_micros,
    );
  }

  _dart_opt_async_pre_txn_delay _opt_async_pre_txn_delay;

  /// /// Before the AsyncQ is triggered by a new element in queue to starts a new run, it delays actually starting the
  /// /// transaction by this value.
  /// /// This gives a newly starting producer some time to produce more than one a single operation before AsyncQ starts.
  /// /// Note: this value should typically be low to keep latency low and prevent accumulating too much operations.
  void opt_async_pre_txn_delay4(
    ffi.Pointer<OBX_store_options> opt,
    int delay_micros,
    int delay2_micros,
    int min_queue_length_for_delay2,
  ) {
    _opt_async_pre_txn_delay4 ??= _dylib.lookupFunction<
        _c_opt_async_pre_txn_delay4,
        _dart_opt_async_pre_txn_delay4>('obx_opt_async_pre_txn_delay4');
    return _opt_async_pre_txn_delay4(
      opt,
      delay_micros,
      delay2_micros,
      min_queue_length_for_delay2,
    );
  }

  _dart_opt_async_pre_txn_delay4 _opt_async_pre_txn_delay4;

  /// /// Similar to preTxDelay but after a transaction was committed.
  /// /// One of the purposes is to give other transactions some time to execute.
  /// /// In combination with preTxDelay this can prolong non-TX batching time if only a few operations are around.
  void opt_async_post_txn_delay(
    ffi.Pointer<OBX_store_options> opt,
    int delay_micros,
  ) {
    _opt_async_post_txn_delay ??= _dylib.lookupFunction<
        _c_opt_async_post_txn_delay,
        _dart_opt_async_post_txn_delay>('obx_opt_async_post_txn_delay');
    return _opt_async_post_txn_delay(
      opt,
      delay_micros,
    );
  }

  _dart_opt_async_post_txn_delay _opt_async_post_txn_delay;

  /// /// Similar to preTxDelay but after a transaction was committed.
  /// /// One of the purposes is to give other transactions some time to execute.
  /// /// In combination with preTxDelay this can prolong non-TX batching time if only a few operations are around.
  void opt_async_post_txn_delay4(
    ffi.Pointer<OBX_store_options> opt,
    int delay_micros,
    int delay2_micros,
    int min_queue_length_for_delay2,
  ) {
    _opt_async_post_txn_delay4 ??= _dylib.lookupFunction<
        _c_opt_async_post_txn_delay4,
        _dart_opt_async_post_txn_delay4>('obx_opt_async_post_txn_delay4');
    return _opt_async_post_txn_delay4(
      opt,
      delay_micros,
      delay2_micros,
      min_queue_length_for_delay2,
    );
  }

  _dart_opt_async_post_txn_delay4 _opt_async_post_txn_delay4;

  /// /// Numbers of operations below this value are considered "minor refills"
  void opt_async_minor_refill_threshold(
    ffi.Pointer<OBX_store_options> opt,
    int queue_length,
  ) {
    _opt_async_minor_refill_threshold ??= _dylib.lookupFunction<
            _c_opt_async_minor_refill_threshold,
            _dart_opt_async_minor_refill_threshold>(
        'obx_opt_async_minor_refill_threshold');
    return _opt_async_minor_refill_threshold(
      opt,
      queue_length,
    );
  }

  _dart_opt_async_minor_refill_threshold _opt_async_minor_refill_threshold;

  /// /// If non-zero, this allows "minor refills" with small batches that came in (off by default).
  void opt_async_minor_refill_max_count(
    ffi.Pointer<OBX_store_options> opt,
    int value,
  ) {
    _opt_async_minor_refill_max_count ??= _dylib.lookupFunction<
            _c_opt_async_minor_refill_max_count,
            _dart_opt_async_minor_refill_max_count>(
        'obx_opt_async_minor_refill_max_count');
    return _opt_async_minor_refill_max_count(
      opt,
      value,
    );
  }

  _dart_opt_async_minor_refill_max_count _opt_async_minor_refill_max_count;

  /// /// Default value: 10000, set to 0 to deactivate pooling
  void opt_async_max_tx_pool_size(
    ffi.Pointer<OBX_store_options> opt,
    int value,
  ) {
    _opt_async_max_tx_pool_size ??= _dylib.lookupFunction<
        _c_opt_async_max_tx_pool_size,
        _dart_opt_async_max_tx_pool_size>('obx_opt_async_max_tx_pool_size');
    return _opt_async_max_tx_pool_size(
      opt,
      value,
    );
  }

  _dart_opt_async_max_tx_pool_size _opt_async_max_tx_pool_size;

  /// /// Total cache size; default: ~ 0.5 MB
  void opt_async_object_bytes_max_cache_size(
    ffi.Pointer<OBX_store_options> opt,
    int value,
  ) {
    _opt_async_object_bytes_max_cache_size ??= _dylib.lookupFunction<
            _c_opt_async_object_bytes_max_cache_size,
            _dart_opt_async_object_bytes_max_cache_size>(
        'obx_opt_async_object_bytes_max_cache_size');
    return _opt_async_object_bytes_max_cache_size(
      opt,
      value,
    );
  }

  _dart_opt_async_object_bytes_max_cache_size
      _opt_async_object_bytes_max_cache_size;

  /// /// Maximal size for an object to be cached (only cache smaller ones)
  void opt_async_object_bytes_max_size_to_cache(
    ffi.Pointer<OBX_store_options> opt,
    int value,
  ) {
    _opt_async_object_bytes_max_size_to_cache ??= _dylib.lookupFunction<
            _c_opt_async_object_bytes_max_size_to_cache,
            _dart_opt_async_object_bytes_max_size_to_cache>(
        'obx_opt_async_object_bytes_max_size_to_cache');
    return _opt_async_object_bytes_max_size_to_cache(
      opt,
      value,
    );
  }

  _dart_opt_async_object_bytes_max_size_to_cache
      _opt_async_object_bytes_max_size_to_cache;

  /// /// Free the options.
  /// /// Note: Only free *unused* options, obx_store_open() frees the options internally
  void opt_free(
    ffi.Pointer<OBX_store_options> opt,
  ) {
    _opt_free ??=
        _dylib.lookupFunction<_c_opt_free, _dart_opt_free>('obx_opt_free');
    return _opt_free(
      opt,
    );
  }

  _dart_opt_free _opt_free;

  /// /// Note: the given options are always freed by this function, including when an error occurs.
  /// /// @param opt required parameter holding the data model (obx_opt_model()) and optional options (see obx_opt_*())
  /// /// @returns NULL if the operation failed, see functions like obx_last_error_code() to get error details
  ffi.Pointer<OBX_store> store_open(
    ffi.Pointer<OBX_store_options> opt,
  ) {
    _store_open ??= _dylib
        .lookupFunction<_c_store_open, _dart_store_open>('obx_store_open');
    return _store_open(
      opt,
    );
  }

  _dart_store_open _store_open;
